# pteranodon

./: .gazebo.py.swp  .gitignore  .gitmodules  .pylintrc  .readthedocs.yaml  AUTHORS  BridgeInterface.py  CMakeLists.txt  CONTRIBUTING.md  DroneInterface.py  Gazebo.py  HexSoon.py  LICENSE  Makefile  README.md  RealSense.py  SIMULATION.md  Sensor.py  SensorData.py  UARTBridge.py  USAGE.md  VideoStreamGST.py  abstractdrone.py  cv_bridge.py  depth.py  drone.py  gazebo.py  gazebo_test.py  hexsoon.py  pyproject.toml  requirements-dev.txt  requirements-extras.txt  requirements.txt  setup.py  simple.py  simple_drone.py  test_script.py  test_simple.py
.ci/: Dockerfile  tests-docker-compose.yaml  wait-for-serv.sh
.devcontainer/: Dockerfile  devcontainer.json  entrypoint.sh
.github/: dependabot.yml
.github/workflows/: black-check.yaml  build-check.yaml  examples.yaml  flake8-check.yaml  format-checks.yaml  github-actions-demo.yml  integration-tests.yaml  mypy-check.yaml  pep-8-check.yaml  pep-8-check.yml  pylint-check.yaml  release-publish.yaml  unit-tests.yaml  wheels.yaml
Interfaces/: CameraInterface.py  DroneInterface.py
build_ext/: CMakeCache.txt  Makefile  cmake_install.cmake
containers/.devcontainer/: Dockerfile  README.md
cpp/: CMakeLists.txt  Makefile
cpp/include/: pteranodon_ext
cpp/include/detectors/: blob_detector.hpp
cpp/include/headers/: blob_detector.hpp
cpp/src/: blob_detector.cpp
cpp/tests/: CMakeLists.txt  Makefile
cpp/tests/src/: benchmark_detectors.hpp  main.cpp  test_detectors.cpp
csm/: RealSense.py  VideoStreamGST.py  csm_gazebo.py  csm_hexsoon.py  csm_mini_hex.py  setup.py
docker_containers/px4_gazebo_Docker/: Dockerfile
docker_containers/px4_gazebo_Docker/sitl_rtsp_proxy/: main.cpp
docs/: conf.py  index.rst  modules.rst  pteranodon.plugins.base_plugins.rst  pteranodon.plugins.ext_plugins.rst  pteranodon.plugins.ext_plugins.sensor.rst  pteranodon.plugins.rst  pteranodon.rst  pteranodon.tests.rst  pteranodon.tests.unit.rst
easy_drone/: __init__.py  abstract_drone.py  abstract_plugin.py  sensor.py  simple_drone.py
easy_drone/plugins/: __init__.py  abstract_plugin.py  calibration.py  core.py  follow_me.py  geofence.py  info.py  offboard.py  param.py  plugin_manager.py  telemetry.py  transponder.py
easy_drone/plugins/base_plugins/: __init__.py  action.py  calibration.py  core.py  follow_me.py  geofence.py  info.py  offboard.py  param.py  telemetry.py  transponder.py
easy_drone/plugins/ext_plugins/: __init__.py  abstract_custom_plugin.py
easy_drone/sensors/: __init__.py  sensor.py  sensor_data.py  sensor_manager.py
examples/: calibration.py  camera.py  camera_params.py  demo.py  failure_injection.py  firmware_version.py  follow_me.py  geofence.py  gimbal.py  goto.py  interactive_demo.py  manual_control.py  mission.py  mission_import.py  offboard.py  offboard_attitude.py  offboard_position_ned.py  offboard_position_velocity_ned.py  offboard_velocity_body.py  offboard_velocity_ned.py  send_status_message.py  shell.py  takeoff_and_land.py  telemetry.py  telemetry_flight_mode.py  telemetry_is_armed_is_in_air.py  telemetry_status_text.py  telemetry_takeoff_and_land.py  transponder.py  tune.py
examples/abstract_drones/: random_move.cfg  random_move.py  random_move_config.json
examples/algorithms/: random_move.py
examples/base_plugins/: calibration.py  camera.py  camera_params.py  example-mission.plan  failure_injection.py  firmware_version.py  geofence.py  gimbal.py  goto.py  manual_control.py  mission.py  mission_import.py  offboard_attitude.py  offboard_position_ned.py  offboard_position_velocity_ned.py  offboard_velocity_body.py  offboard_velocity_ned.py  shell.py  telemetry.py  telemetry_flight_mode.py  telemetry_is_armed_is_in_air.py  telemetry_takeoff_and_land.py  transponder.py  tune.py
examples/custom_plugins/: example_plugin.py
examples/extension_plugins/: config.py  relative.py
examples/extension_plugins/config_files/: config.cfg  config.ini  config.json  config.txt
examples/meta_plugins/: manual_publish_test.py  ros_start_test.py  rospub_test.py  subscriber_test.py  test_topics.sh
include/detectors/: blob_detector.hpp
models/networks/mobilenet_v1/: README.md  model.ckpt.index  object-detection.pbtxt  pipeline.config
models/networks/modilenet_v1/: mobilenet_v1.py
pteranodon/: README.md  __init__.py  abstract_drone.py  autoconnect.py  gazebo.py  server_detector.py  simple_drone.py
pteranodon/ext/: __init__.py
pteranodon/implementations/: realsense.py
pteranodon/implementations/hardware/: __init__.py  videostream_gst.py  virtual_realsense.py
pteranodon/implementations/networks/: __init__.py  mobilenet_v1.py
pteranodon/plugins/: __init__.py  abstract_plugin.py  plugin_manager.py
pteranodon/plugins/base_plugins/: __init__.py  abstract_base_plugin.py  action.py  action_server.py  camera.py  (+28 more)
pteranodon/tools/: logger.py  server_detector.py
pteranodon/utils/: __init__.py  camera.py  decorators.py  gazebo.py  logger.py  server_detector.py  videostream_gst.py
px4_gazebo_Docker/: Dockerfile  edit_rcS.bash  entrypoint.sh
python/: blob_detector.cpp  pteranodon_ext.cpp
python/converters/: converters.hpp  ndarray_converter.cpp  ndarray_converter.h
python/detectors/: blob_detector.cpp  blob_detector.hpp
scripts/: download_all.sh  gazebo_logger.py  init.bat  install.sh  install_pip_dependencies.sh  install_px4.sh  install_ros.sh  install_ubuntu.bat  parallel_test.py  power_privileges.sh  run.sh  run_ci.sh  start.sh  wsl_init.bat
scripts/misc/: install_opencv.sh  install_px4.sh  kill_gazebo.sh
scripts/tests/: run_examples.sh  run_integration_tests.sh  run_unit_tests.sh
scripts/tools/: gazebo_logger.py  install_pip_dependencies.sh  logfile_parser.py  power_privileges.sh  run_ci.sh
scripts/windows/: uninstall_ubuntu.bat
source/: conf.py  index.rst
src/: blob_detector.cpp
src/pteranodon/: README.md  __init__.py  abstract_drone.py
tests/: conftest.py  helpers.py  test-requirements.txt
tests/integration/: conftest.py  helpers.py  test_offboard.py
tests/unit/: test_abstract_plugin.py
(+99 files in other folders)
