[build-system]
requires = [
    "setuptools",
    "scikit-build>=0.13",
    "cmake",
    "ninja",
    "pybind11",
]
build-backend = "setuptools.build_meta"

[project]
name = "pteranodon"
version = "0.0.1.1"
authors = [
  { name="Justin Davis", email="jcdavis@mines.edu" },
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/AutonoLab/pteranodon"
"Bug Tracker" = "https://github.com/AutonoLab/pteranodon/issues"