[build-system]
requires = ["scikit-build-core>=0.2.1", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "pteranodon"
version = "0.0.1.1"
authors = [
  { name="Justin Davis", email="jcdavis@mines.edu" },
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python=">=3.8"

[project.urls]
"Homepage" = "https://github.com/AutonoLab/pteranodon"
"Bug Tracker" = "https://github.com/AutonoLab/pteranodon/issues"

[tool.scikit-build]
wheel.expand-macos-universal-tags = true

[tool.cibuildwheel]
test-command = "pytest {project}/tests"
test-extras = ["test"]
test-skip = ["*universal2:arm64"]
build-verbosity = 1
